--- a/PadcastsApp/PadcastsApp/Base.lproj/Main.storyboard
+++ b/PadcastsApp/PadcastsApp/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,24 +23,48 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCellIdentifier" rowHeight="80" id="IcH-Q9-fp1" customClass="CustomCellTableViewCell">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="80"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="customCellIdentifier" rowHeight="140" id="IcH-Q9-fp1" customClass="CustomCellTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="140"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IcH-Q9-fp1" id="TL9-dW-yby">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="79.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="139.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Zaf-89-nrM">
-                                                    <rect key="frame" x="20" y="0.0" width="335" height="79.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="17B-WT-b61">
+                                                    <rect key="frame" x="114" y="10" width="251" height="119.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5B-v5-Ioc">
-                                                            <rect key="frame" x="0.0" y="0.0" width="335" height="40.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5B-v5-Ioc">
+                                                            <rect key="frame" x="0.0" y="0.0" width="251" height="40"/>
+                                                            <color key="backgroundColor" red="1" green="0.48164004863129073" blue="0.058360835773063613" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWL-FN-ho5">
-                                                            <rect key="frame" x="0.0" y="45.5" width="335" height="34"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uWL-FN-ho5">
+                                                            <rect key="frame" x="0.0" y="45" width="251" height="29.5"/>
+                                                            <color key="backgroundColor" red="0.56195278161164897" green="1" blue="0.59522700558723973" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zgy-jk-S4n">
+                                                            <rect key="frame" x="0.0" y="79.5" width="251" height="40"/>
+                                                            <color key="backgroundColor" red="0.56195278159999995" green="1" blue="0.59522700559999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Owd-zv-TYf">
+                                                    <rect key="frame" x="10" y="10" width="84" height="119.5"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="music_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="lPO-K3-le1">
+                                                            <rect key="frame" x="0.0" y="0.0" width="84" height="97.5"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EtB-gb-ExL">
+                                                            <rect key="frame" x="0.0" y="102.5" width="84" height="17"/>
+                                                            <color key="backgroundColor" red="0.56195278159999995" green="1" blue="0.59522700559999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -48,10 +73,14 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Zaf-89-nrM" firstAttribute="top" secondItem="TL9-dW-yby" secondAttribute="top" id="0FK-O3-JyL"/>
-                                                <constraint firstAttribute="trailing" secondItem="Zaf-89-nrM" secondAttribute="trailing" constant="20" id="Cww-zM-ic4"/>
-                                                <constraint firstItem="Zaf-89-nrM" firstAttribute="leading" secondItem="TL9-dW-yby" secondAttribute="leading" constant="20" id="P6H-nk-uRn"/>
-                                                <constraint firstAttribute="bottom" secondItem="Zaf-89-nrM" secondAttribute="bottom" id="bsS-Zs-eM6"/>
+                                                <constraint firstAttribute="trailing" secondItem="17B-WT-b61" secondAttribute="trailing" constant="10" id="1zY-8k-gLY"/>
+                                                <constraint firstItem="17B-WT-b61" firstAttribute="leading" secondItem="Owd-zv-TYf" secondAttribute="trailing" constant="20" id="7sn-IE-Pvy"/>
+                                                <constraint firstItem="17B-WT-b61" firstAttribute="width" secondItem="Owd-zv-TYf" secondAttribute="width" multiplier="3" id="Ai7-Sj-Q1j"/>
+                                                <constraint firstItem="Owd-zv-TYf" firstAttribute="top" secondItem="TL9-dW-yby" secondAttribute="top" constant="10" id="RoH-ab-q9h"/>
+                                                <constraint firstAttribute="bottom" secondItem="17B-WT-b61" secondAttribute="bottom" constant="10" id="cUL-3v-mI7"/>
+                                                <constraint firstAttribute="bottom" secondItem="Owd-zv-TYf" secondAttribute="bottom" constant="10" id="o4k-C2-SAs"/>
+                                                <constraint firstItem="Owd-zv-TYf" firstAttribute="leading" secondItem="TL9-dW-yby" secondAttribute="leading" constant="10" id="rql-Os-oQa"/>
+                                                <constraint firstItem="17B-WT-b61" firstAttribute="top" secondItem="TL9-dW-yby" secondAttribute="top" constant="10" id="ttS-Eo-daO"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -80,4 +109,7 @@
             <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="music_placeholder" width="500" height="500"/>
+    </resources>
 </document>
