--- a/PadcastsApp/PadcastsApp/Base.lproj/Main.storyboard
+++ b/PadcastsApp/PadcastsApp/Base.lproj/Main.storyboard
@@ -108,8 +108,62 @@
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="DsC-eu-TnF">
+            <objects>
+                <viewController id="eWo-gu-fbJ" customClass="DetailViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QHq-vo-moI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Em-XI-Nbt">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NCb-3V-zTQ">
+                                        <rect key="frame" x="8" y="8" width="375" height="647"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jhg-4S-32P">
+                                                <rect key="frame" x="20" y="70" width="335" height="42"/>
+                                                <color key="backgroundColor" red="0.0084196891191710144" green="0.0030990336936435898" blue="0.0031748731022770145" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                                <color key="textColor" red="0.55252185880829008" green="0.20336663654513473" blue="0.20834341543043244" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="jhg-4S-32P" firstAttribute="top" secondItem="NCb-3V-zTQ" secondAttribute="top" constant="70" id="48l-fP-6C5"/>
+                                            <constraint firstItem="jhg-4S-32P" firstAttribute="leading" secondItem="NCb-3V-zTQ" secondAttribute="leading" constant="20" id="n1w-yL-0Yb"/>
+                                            <constraint firstAttribute="trailing" secondItem="jhg-4S-32P" secondAttribute="trailing" constant="20" id="zmY-R5-sHb"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="NCb-3V-zTQ" firstAttribute="top" secondItem="3Em-XI-Nbt" secondAttribute="top" constant="8" id="9b3-ZT-20P"/>
+                                    <constraint firstItem="NCb-3V-zTQ" firstAttribute="leading" secondItem="3Em-XI-Nbt" secondAttribute="leading" constant="8" id="CkU-dp-q0T"/>
+                                    <constraint firstAttribute="trailing" secondItem="NCb-3V-zTQ" secondAttribute="trailing" constant="8" id="PBg-l0-9wb"/>
+                                    <constraint firstAttribute="bottom" secondItem="NCb-3V-zTQ" secondAttribute="bottom" constant="8" id="X9U-PB-4v9"/>
+                                    <constraint firstItem="NCb-3V-zTQ" firstAttribute="height" secondItem="3Em-XI-Nbt" secondAttribute="height" priority="250" id="Zie-60-vB1"/>
+                                    <constraint firstItem="NCb-3V-zTQ" firstAttribute="width" secondItem="3Em-XI-Nbt" secondAttribute="width" id="cfh-YP-mEa"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7t0-4H-6Ri" firstAttribute="bottom" secondItem="3Em-XI-Nbt" secondAttribute="bottom" id="Ksy-PX-nLs"/>
+                            <constraint firstItem="3Em-XI-Nbt" firstAttribute="leading" secondItem="7t0-4H-6Ri" secondAttribute="leading" id="RNs-UR-MFV"/>
+                            <constraint firstItem="3Em-XI-Nbt" firstAttribute="top" secondItem="7t0-4H-6Ri" secondAttribute="top" id="jUa-gG-8A7"/>
+                            <constraint firstItem="7t0-4H-6Ri" firstAttribute="trailing" secondItem="3Em-XI-Nbt" secondAttribute="trailing" id="p1N-OU-ZlQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="7t0-4H-6Ri"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="B1B-Dd-bnP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="919.20000000000005" y="121.88905547226388"/>
+        </scene>
     </scenes>
     <resources>
-        <image name="music_placeholder" width="500" height="500"/>
+        <image name="music_placeholder" width="250" height="250"/>
     </resources>
 </document>
