--- a/PadcastsApp/PadcastsApp/Base.lproj/Main.storyboard
+++ b/PadcastsApp/PadcastsApp/Base.lproj/Main.storyboard
@@ -129,6 +129,10 @@
                                                 <color key="textColor" red="0.55252185880829008" green="0.20336663654513473" blue="0.20834341543043244" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6TL-yN-0mW">
+                                                <rect key="frame" x="45" y="160" width="240" height="128"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </scrollView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
