--- a/PadcastsApp/PadcastsApp/Base.lproj/Main.storyboard
+++ b/PadcastsApp/PadcastsApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hq9-as-R9c">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yqj-cB-jYG">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView verifyAmbiguity="off" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uP7-iC-ChI">
-                                <rect key="frame" x="0.0" y="20" width="375" height="716"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="672"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="video_placeholder3" translatesAutoresizingMaskIntoConstraints="NO" id="pZB-2l-JC8">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="294.33333333333331"/>
@@ -47,21 +47,21 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uRV-gT-gl4">
-                                                <rect key="frame" x="0.0" y="142" width="374" height="36"/>
+                                                <rect key="frame" x="0.0" y="142.00000000000006" width="374" height="36"/>
                                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Download"/>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xxd-hq-unI">
                                                 <rect key="frame" x="0.0" y="188" width="374" height="690"/>
-                                                <mutableString key="text">DescriptionowqhfighfhffhwuhfquwhfiouwhfihwiowhwhfowhgfohwgfohwgfohgwfowgogwioghwoghwfogfogfwhfwiuhwhwoiwhufThe UIScrollView just needs to understand how much width and space it has inside it. So it needs to have something pinned to the Leading, Trailing, Top &amp; Bottom constraints. Also the width and height of the content needs to be fixed (this does not mean I have to specificy it. I can still use constraints to achieve this.)
+                                                <string key="text">DescriptionowqhfighfhffhwuhfquwhfiouwhfihwiowhwhfowhgfohwgfohwgfohgwfowgogwioghwoghwfogfogfwhfwiuhwhwoiwhufThe UIScrollView just needs to understand how much width and space it has inside it. So it needs to have something pinned to the Leading, Trailing, Top &amp; Bottom constraints. Also the width and height of the content needs to be fixed (this does not mean I have to specificy it. I can still use constraints to achieve this.)
 Add a UIScrollView and position as required.
 Add a UIView inside the UIScrollView for the content.
 Set the Leading, Trailing, Top &amp; Bottom constraints of the content UIView to be 0.
 Add an Equal Width constraint to the UIScrollView and UIView. This will make it vertically scrolling only.
 You now need to set the height of the content UIView. You can then either specify the height of the content view (blech) or use the height of the controls contained within by making sure the bottom control is constrained to the bottom of the content view.I am using the interface builder. I changed the constraint left and right to -16 and it worked. I don't believe its the correct behavior. Is there a way to make it work with 0? – Gasim Sep 22 '14 at 20:15
 I'm not as familiar with interface builder. I typically use the constraintsWithVisualFormat method in code. But, maybe try to remove the constraints for the contentView. I normally set the contentView size in 
-</mutableString>
+</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -115,10 +115,39 @@ I'm not as familiar with interface builder. I typically use the constraintsWithV
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="91D-cW-pDc">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="72e-do-Iyb">
+                            <rect key="frame" x="146.66666666666666" y="7.6666666666666679" width="120.99999999999997" height="29.000000000000004"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="First"/>
+                                <segment title="Second"/>
+                            </segments>
+                        </segmentedControl>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="THq-Qa-lJQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="816.79999999999995" y="87.706146926536732"/>
+            <point key="canvasLocation" x="1723.1884057971015" y="87.228260869565219"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JEW-gW-ZWR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yqj-cB-jYG" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Siz-fk-KJr">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hq9-as-R9c" kind="relationship" relationship="rootViewController" id="nSe-Fu-j7W"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7ze-uQ-tnd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="815.94202898550736" y="87.228260869565219"/>
         </scene>
     </scenes>
     <resources>
